accelerated-domains: add zrtg-group.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102235,6 +102235,7 @@ server=/zrmxswrl.com/114.114.114.114
 server=/zrnle2550.vip/114.114.114.114
 server=/zrpwxgp.com/114.114.114.114
 server=/zrtechnology.com/114.114.114.114
+server=/zrtg-group.com/114.114.114.114
 server=/zrtg.com/114.114.114.114
 server=/zrthink.com/114.114.114.114
 server=/zrtjt.com/114.114.114.114
