accelerated-domains: add energy-greenland.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29515,6 +29515,7 @@ server=/endianpp.com/114.114.114.114
 server=/endress.store/114.114.114.114
 server=/enec.net/114.114.114.114
 server=/enelcn.com/114.114.114.114
+server=/energy-greenland.com/114.114.114.114
 server=/energy-root.com/114.114.114.114
 server=/enet16.com/114.114.114.114
 server=/enet16.net/114.114.114.114
