--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38580,6 +38580,7 @@ server=/gyzdh.com/114.114.114.114
 server=/gyzfbz.net/114.114.114.114
 server=/gyzsgd.com/114.114.114.114
 server=/gz-begreen.com/114.114.114.114
+server=/gz-best.com/114.114.114.114
 server=/gz-chantou.com/114.114.114.114
 server=/gz-cjjl.com/114.114.114.114
 server=/gz-cmc.com/114.114.114.114
