accelerated-domains: add gzcablec.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38643,6 +38643,7 @@ server=/gzbxyy120.com/114.114.114.114
 server=/gzbycq.com/114.114.114.114
 server=/gzbyyy.com/114.114.114.114
 server=/gzbzsport.com/114.114.114.114
+server=/gzcablec.com/114.114.114.114
 server=/gzcancer.com/114.114.114.114
 server=/gzch120.com/114.114.114.114
 server=/gzch12333.com/114.114.114.114
