accelerated-domains: add gzlsgy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38818,6 +38818,7 @@ server=/gzlig.com/114.114.114.114
 server=/gzlingli.com/114.114.114.114
 server=/gzliyuanhb.com/114.114.114.114
 server=/gzlpml.com/114.114.114.114
+server=/gzlsgy.com/114.114.114.114
 server=/gzlujiao.com/114.114.114.114
 server=/gzlutong.com/114.114.114.114
 server=/gzluxlife.com/114.114.114.114
