accelerated-domains: add hengyankeji.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41058,6 +41058,7 @@ server=/hengxueedu.com/114.114.114.114
 server=/hengyagongshui.com/114.114.114.114
 server=/hengyan.com/114.114.114.114
 server=/hengyangfang.com/114.114.114.114
+server=/hengyankeji.com/114.114.114.114
 server=/hengyemould.com/114.114.114.114
 server=/hengyi-optics.com/114.114.114.114
 server=/hengyi.com/114.114.114.114
