--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62849,6 +62849,7 @@ server=/nddst.com/114.114.114.114
 server=/ndhx.net/114.114.114.114
 server=/ndhys.com/114.114.114.114
 server=/ndiip.com/114.114.114.114
+server=/ndj-china.com/114.114.114.114
 server=/ndj520.com/114.114.114.114
 server=/ndjcwf.com/114.114.114.114
 server=/ndkhn.com/114.114.114.114
