accelerated-domains: add ccm-hardware.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17950,6 +17950,7 @@ server=/ccluster.net/114.114.114.114
 server=/cclycs.com/114.114.114.114
 server=/cclyun.com/114.114.114.114
 server=/ccm-1.com/114.114.114.114
+server=/ccm-hardware.com/114.114.114.114
 server=/ccm99.com/114.114.114.114
 server=/ccmama.com/114.114.114.114
 server=/ccmbv.com/114.114.114.114
