accelerated-domains: add giihg.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34325,6 +34325,7 @@ server=/gigpayroll.com/114.114.114.114
 server=/gihg.com/114.114.114.114
 server=/gihiji.com/114.114.114.114
 server=/giho.com/114.114.114.114
+server=/giihg.com/114.114.114.114
 server=/giikin.com/114.114.114.114
 server=/giiktop.com/114.114.114.114
 server=/giiso.com/114.114.114.114
