--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -65478,6 +65478,7 @@ server=/olzz.com/114.114.114.114
 server=/omacloud.com/114.114.114.114
 server=/omanlin.com/114.114.114.114
 server=/omarea.com/114.114.114.114
+server=/omarte.com/114.114.114.114
 server=/omaten.com/114.114.114.114
 server=/ombuy.com/114.114.114.114
 server=/omccsh.com/114.114.114.114
