accelerated-domains: add truzem.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83009,6 +83009,7 @@ server=/trustmta.com/114.114.114.114
 server=/trustutn.org/114.114.114.114
 server=/trutes.com/114.114.114.114
 server=/truthsinfo.com/114.114.114.114
+server=/truzem.com/114.114.114.114
 server=/trvok.com/114.114.114.114
 server=/trwl.net/114.114.114.114
 server=/tryfun.com/114.114.114.114
