accelerated-domains: add bio-island.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14829,6 +14829,7 @@ server=/bio-equip.com/114.114.114.114
 server=/bio-fount.com/114.114.114.114
 server=/bio-fuyang.com/114.114.114.114
 server=/bio-info-trainee.com/114.114.114.114
+server=/bio-island.com/114.114.114.114
 server=/bio-protocol.org/114.114.114.114
 server=/bio-review.com/114.114.114.114
 server=/bio360.net/114.114.114.114
