accelerated-domains: add gzjeeseng.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38765,6 +38765,7 @@ server=/gzidc.com/114.114.114.114
 server=/gzitwm.net/114.114.114.114
 server=/gzj568.com/114.114.114.114
 server=/gzjc2016.com/114.114.114.114
+server=/gzjeeseng.com/114.114.114.114
 server=/gzjgpy.com/114.114.114.114
 server=/gzjhotel.com/114.114.114.114
 server=/gzjiangheng.com/114.114.114.114
