accelerated-domains: add gzocl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38863,6 +38863,7 @@ server=/gznotes.com/114.114.114.114
 server=/gznw.com/114.114.114.114
 server=/gznxbank.com/114.114.114.114
 server=/gznypfk.com/114.114.114.114
+server=/gzocl.com/114.114.114.114
 server=/gzpeite.com/114.114.114.114
 server=/gzpeiyou.com/114.114.114.114
 server=/gzpfs.com/114.114.114.114
