accelerated-domains: add bangtaixcl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13206,6 +13206,7 @@ server=/bangqu.com/114.114.114.114
 server=/bangrong.com/114.114.114.114
 server=/bangsee.com/114.114.114.114
 server=/bangshouwang.com/114.114.114.114
+server=/bangtaixcl.com/114.114.114.114
 server=/bangthink.com/114.114.114.114
 server=/bangtukj.com/114.114.114.114
 server=/banguanjiabc.com/114.114.114.114
