--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38719,6 +38719,7 @@ server=/gzgjcm.com/114.114.114.114
 server=/gzglgcjt.com/114.114.114.114
 server=/gzgljx.com/114.114.114.114
 server=/gzgmjcx.com/114.114.114.114
+server=/gzgongsizhuce.com/114.114.114.114
 server=/gzgreatsun.com/114.114.114.114
 server=/gzguangjia.com/114.114.114.114
 server=/gzguidian.com/114.114.114.114
