--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38888,6 +38888,7 @@ server=/gzqixun-tech.com/114.114.114.114
 server=/gzqljxd.com/114.114.114.114
 server=/gzqsts.com/114.114.114.114
 server=/gzqunsheng.com/114.114.114.114
+server=/gzqygl.com/114.114.114.114
 server=/gzrand.com/114.114.114.114
 server=/gzrch.com/114.114.114.114
 server=/gzrcqf.com/114.114.114.114
