--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38944,6 +38944,7 @@ server=/gzswjs.com/114.114.114.114
 server=/gzsytw.com/114.114.114.114
 server=/gzszgas.com/114.114.114.114
 server=/gzszgyjt.com/114.114.114.114
+server=/gzszjl.com/114.114.114.114
 server=/gzszyy.com/114.114.114.114
 server=/gztaiyou.com/114.114.114.114
 server=/gztalx.com/114.114.114.114
