--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33374,6 +33374,7 @@ server=/gapitech.com/114.114.114.114
 server=/gara.cc/114.114.114.114
 server=/garden-aquarium.com/114.114.114.114
 server=/gardencn.com/114.114.114.114
+server=/gardenhotel.com/114.114.114.114
 server=/garleden.com/114.114.114.114
 server=/garmuri.com/114.114.114.114
 server=/garnoc.com/114.114.114.114
