--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33565,6 +33565,7 @@ server=/gddikasi.com/114.114.114.114
 server=/gddmsmc.com/114.114.114.114
 server=/gddqfs.com/114.114.114.114
 server=/gddqfs.net/114.114.114.114
+server=/gddrcgzjt.com/114.114.114.114
 server=/gddtop.com/114.114.114.114
 server=/gddyhb168.com/114.114.114.114
 server=/gdeams.com/114.114.114.114
