accelerated-domains: add getpm.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34001,6 +34001,7 @@ server=/getlema.com/114.114.114.114
 server=/getmaomao.com/114.114.114.114
 server=/getmarkman.com/114.114.114.114
 server=/getnurseanesthesiologistjobs.com/114.114.114.114
+server=/getpm.com/114.114.114.114
 server=/getquicker.net/114.114.114.114
 server=/getrebuild.com/114.114.114.114
 server=/getsays.com/114.114.114.114
