--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66573,6 +66573,7 @@ server=/patent9.com/114.114.114.114
 server=/patentguru.com/114.114.114.114
 server=/patexplorer.com/114.114.114.114
 server=/patheagames.com/114.114.114.114
+server=/pathologycn.com/114.114.114.114
 server=/patsev.com/114.114.114.114
 server=/patsnapglobal.com/114.114.114.114
 server=/patv123.com/114.114.114.114
