--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16301,6 +16301,7 @@ server=/bre-line56.com/114.114.114.114
 server=/bre-linex.com/114.114.114.114
 server=/breadtrip.com/114.114.114.114
 server=/breenomeet.cc/114.114.114.114
+server=/breeze-chem.com/114.114.114.114
 server=/brentron.com/114.114.114.114
 server=/brewbeerwiki.org/114.114.114.114
 server=/brewersmix.com/114.114.114.114
