accelerated-domains: add kingyork.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -53039,6 +53039,7 @@ server=/kingview.com/114.114.114.114
 server=/kingwaywoods.com/114.114.114.114
 server=/kingwisoft.com/114.114.114.114
 server=/kingyon.com/114.114.114.114
+server=/kingyork.com/114.114.114.114
 server=/kingzom.com/114.114.114.114
 server=/kinhom.com/114.114.114.114
 server=/kinlong.com/114.114.114.114
