--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87437,6 +87437,7 @@ server=/welllinkio.com/114.114.114.114
 server=/wellnode.com/114.114.114.114
 server=/wellpie.com/114.114.114.114
 server=/wellplas.com/114.114.114.114
+server=/wellselectronic.com/114.114.114.114
 server=/wellsoon.com/114.114.114.114
 server=/wellwhales.com/114.114.114.114
 server=/welove520.com/114.114.114.114
