--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21564,6 +21564,7 @@ server=/clqrmyy.com/114.114.114.114
 server=/clroi.com/114.114.114.114
 server=/cls.cc/114.114.114.114
 server=/clsbhs.com/114.114.114.114
+server=/clsgd.com/114.114.114.114
 server=/clshanghai.com/114.114.114.114
 server=/clsj.com/114.114.114.114
 server=/clssn.com/114.114.114.114
