--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17125,6 +17125,7 @@ server=/c-ps.net/114.114.114.114
 server=/c-rst.com/114.114.114.114
 server=/c-sz.com/114.114.114.114
 server=/c-t.work/114.114.114.114
+server=/c-vcc.com/114.114.114.114
 server=/c-yl.com/114.114.114.114
 server=/c.citic/114.114.114.114
 server=/c05ua.icu/114.114.114.114
