accelerated-domains: add fstgs.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32426,6 +32426,7 @@ server=/fsspc.com/114.114.114.114
 server=/fssptjj.com/114.114.114.114
 server=/fstaoci.com/114.114.114.114
 server=/fstcb.com/114.114.114.114
+server=/fstgs.com/114.114.114.114
 server=/fsthr.com/114.114.114.114
 server=/fstrhb.com/114.114.114.114
 server=/fsukj.com/114.114.114.114
