--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38639,6 +38639,7 @@ server=/gzap.net/114.114.114.114
 server=/gzaptech.net/114.114.114.114
 server=/gzasp.net/114.114.114.114
 server=/gzate.com/114.114.114.114
+server=/gzautojet.com/114.114.114.114
 server=/gzbaozhilin.com/114.114.114.114
 server=/gzbawei.com/114.114.114.114
 server=/gzbeaton.com/114.114.114.114
