--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55904,6 +55904,7 @@ server=/lichee.pro/114.114.114.114
 server=/lichenglove.com/114.114.114.114
 server=/lichengwu.net/114.114.114.114
 server=/lichenjy.com/114.114.114.114
+server=/lichiwei.com/114.114.114.114
 server=/lichong.work/114.114.114.114
 server=/lichuang.ren/114.114.114.114
 server=/lickeji.com/114.114.114.114
