--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71459,6 +71459,7 @@ server=/rendeyixue.com/114.114.114.114
 server=/rendiyu.com/114.114.114.114
 server=/rendna.com/114.114.114.114
 server=/rendoc.com/114.114.114.114
+server=/renead.com/114.114.114.114
 server=/renegade-project.org/114.114.114.114
 server=/renergy-me.com/114.114.114.114
 server=/renfei.net/114.114.114.114
