--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -72290,6 +72290,7 @@ server=/ruian.com/114.114.114.114
 server=/ruianfang.com/114.114.114.114
 server=/ruianrz.com/114.114.114.114
 server=/ruibai.com/114.114.114.114
+server=/ruibangwl.com/114.114.114.114
 server=/ruibopin.com/114.114.114.114
 server=/ruiccm.com/114.114.114.114
 server=/ruichengmedia.com/114.114.114.114
