accelerated-domains: add letschuhai.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55488,6 +55488,7 @@ server=/letou8.com/114.114.114.114
 server=/letoursport.com/114.114.114.114
 server=/letrychina.com/114.114.114.114
 server=/lets-study.com/114.114.114.114
+server=/letschuhai.com/114.114.114.114
 server=/letsebuy.com/114.114.114.114
 server=/letsfilm.org/114.114.114.114
 server=/letsgaga.com/114.114.114.114
