accelerated-domains: add gzsjgxcl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38928,6 +38928,7 @@ server=/gzshuimh.com/114.114.114.114
 server=/gzshujuhui.com/114.114.114.114
 server=/gzshyk.com/114.114.114.114
 server=/gzsj.live/114.114.114.114
+server=/gzsjgxcl.com/114.114.114.114
 server=/gzsjjs.com/114.114.114.114
 server=/gzsjyzx.com/114.114.114.114
 server=/gzskysoil.com/114.114.114.114
