--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -13082,6 +13082,7 @@ server=/baiyiba.com/114.114.114.114
 server=/baiyikc.com/114.114.114.114
 server=/baiying.com/114.114.114.114
 server=/baiyinggd.com/114.114.114.114
+server=/baiyizg.com/114.114.114.114
 server=/baiyjk.com/114.114.114.114
 server=/baiyou100.com/114.114.114.114
 server=/baiyu.tech/114.114.114.114
