accelerated-domains: add huashidongman.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43695,6 +43695,7 @@ server=/huashi6.com/114.114.114.114
 server=/huashibus.com/114.114.114.114
 server=/huashichang.com/114.114.114.114
 server=/huashideh.com/114.114.114.114
+server=/huashidongman.com/114.114.114.114
 server=/huashijie.art/114.114.114.114
 server=/huashilm.com/114.114.114.114
 server=/huashipharmacymtalionlineybpay.com/114.114.114.114
