accelerated-domains: add huaxinpark.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43801,6 +43801,7 @@ server=/huaxingas.com/114.114.114.114
 server=/huaxingchem.com/114.114.114.114
 server=/huaxingku.com/114.114.114.114
 server=/huaxinorthop.com/114.114.114.114
+server=/huaxinpark.com/114.114.114.114
 server=/huaxintec.com/114.114.114.114
 server=/huaxinzhuji.com/114.114.114.114
 server=/huaxiong.com/114.114.114.114
