accelerated-domains: add tronlong.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82982,6 +82982,7 @@ server=/trojantesting.com/114.114.114.114
 server=/trollax.com/114.114.114.114
 server=/tronixin.com/114.114.114.114
 server=/tronlife.com/114.114.114.114
+server=/tronlong.com/114.114.114.114
 server=/tropcdn.com/114.114.114.114
 server=/troxchina.com/114.114.114.114
 server=/trpcdn.net/114.114.114.114
