--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35199,6 +35199,7 @@ server=/googleplus.party/114.114.114.114
 server=/googlevip8.com/114.114.114.114
 server=/googlevoice.org/114.114.114.114
 server=/googleyixia.com/114.114.114.114
+server=/googolpark.com/114.114.114.114
 server=/googvv.com/114.114.114.114
 server=/gooioo.com/114.114.114.114
 server=/goolemall.com/114.114.114.114
