--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38894,6 +38894,7 @@ server=/gzprg.com/114.114.114.114
 server=/gzprobig.com/114.114.114.114
 server=/gzpts.com/114.114.114.114
 server=/gzpy120.net/114.114.114.114
+server=/gzpydlc.com/114.114.114.114
 server=/gzqbd.com/114.114.114.114
 server=/gzqiche.com/114.114.114.114
 server=/gzqixun-tech.com/114.114.114.114
