accelerated-domains: add gzdaqi.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38682,6 +38682,7 @@ server=/gzczjd.com/114.114.114.114
 server=/gzdai.com/114.114.114.114
 server=/gzdaily.com/114.114.114.114
 server=/gzdaochen.com/114.114.114.114
+server=/gzdaqi.com/114.114.114.114
 server=/gzdata.net/114.114.114.114
 server=/gzdbx.com/114.114.114.114
 server=/gzdcsmt.com/114.114.114.114
