accelerated-domains: add gzsouth.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38937,6 +38937,7 @@ server=/gzsjjs.com/114.114.114.114
 server=/gzsjyzx.com/114.114.114.114
 server=/gzskysoil.com/114.114.114.114
 server=/gzslyy.com/114.114.114.114
+server=/gzsouth.com/114.114.114.114
 server=/gzspt.com/114.114.114.114
 server=/gzsq.com/114.114.114.114
 server=/gzsqkfyy.com/114.114.114.114
