--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39004,6 +39004,7 @@ server=/gzwarriortech.com/114.114.114.114
 server=/gzwaterinvest.com/114.114.114.114
 server=/gzwatersupply.com/114.114.114.114
 server=/gzwcfjd.com/114.114.114.114
+server=/gzwcit.com/114.114.114.114
 server=/gzwcjs.com/114.114.114.114
 server=/gzweicai.com/114.114.114.114
 server=/gzweix.com/114.114.114.114
