--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82297,6 +82297,7 @@ server=/tngcjx.com/114.114.114.114
 server=/tnjly.com/114.114.114.114
 server=/tnkjmec.com/114.114.114.114
 server=/tnodenow.com/114.114.114.114
+server=/tnsou.com/114.114.114.114
 server=/tnzuwu.com/114.114.114.114
 server=/to-future.net/114.114.114.114
 server=/to2025.com/114.114.114.114
