--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33588,6 +33588,7 @@ server=/gdfs.com/114.114.114.114
 server=/gdfshx.com/114.114.114.114
 server=/gdgassoc.com/114.114.114.114
 server=/gdggkf.com/114.114.114.114
+server=/gdghg.com/114.114.114.114
 server=/gdgkty.com/114.114.114.114
 server=/gdgrsw.com/114.114.114.114
 server=/gdgudong.com/114.114.114.114
