accelerated-domains: add gzgccs.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38722,6 +38722,7 @@ server=/gzfsnet.com/114.114.114.114
 server=/gzgajy.com/114.114.114.114
 server=/gzgas.com/114.114.114.114
 server=/gzgayy.com/114.114.114.114
+server=/gzgccs.com/114.114.114.114
 server=/gzgcg.com/114.114.114.114
 server=/gzgcsmart.com/114.114.114.114
 server=/gzgdkq.com/114.114.114.114
