--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39092,6 +39092,7 @@ server=/gzzoc.com/114.114.114.114
 server=/gzzongsi.com/114.114.114.114
 server=/gzzoo.com/114.114.114.114
 server=/gzzqy.net/114.114.114.114
+server=/gzzrdc007.com/114.114.114.114
 server=/gzzx.cc/114.114.114.114
 server=/h-ceo.com/114.114.114.114
 server=/h-college.com/114.114.114.114
