accelerated-domains: add henovcom.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41104,6 +41104,7 @@ server=/henlius.com/114.114.114.114
 server=/henluoli.com/114.114.114.114
 server=/henmimang.com/114.114.114.114
 server=/henningchem.com/114.114.114.114
+server=/henovcom.com/114.114.114.114
 server=/henrayglass.com/114.114.114.114
 server=/henri.ren/114.114.114.114
 server=/hensctai.com/114.114.114.114
