accelerated-domains: add winheadhunter.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -88337,6 +88337,7 @@ server=/wingon-travel.com/114.114.114.114
 server=/wingoodparking.com/114.114.114.114
 server=/wingsbook.com/114.114.114.114
 server=/wingtecher.com/114.114.114.114
+server=/winheadhunter.com/114.114.114.114
 server=/winhong.com/114.114.114.114
 server=/winicssec.com/114.114.114.114
 server=/winjoinit.com/114.114.114.114
