--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42711,6 +42711,7 @@ server=/hongzhentextile.com/114.114.114.114
 server=/hongzhigongzuowang.com/114.114.114.114
 server=/hongzhiwanju.com/114.114.114.114
 server=/hongzhoukan.com/114.114.114.114
+server=/hongzhuojituan.com/114.114.114.114
 server=/honhan.ltd/114.114.114.114
 server=/honkaiimpact3.com/114.114.114.114
 server=/honkaistarrail.com/114.114.114.114
