--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38925,6 +38925,7 @@ server=/gzscbio.com/114.114.114.114
 server=/gzschknyy.com/114.114.114.114
 server=/gzsdwrmyy.com/114.114.114.114
 server=/gzselon.com/114.114.114.114
+server=/gzsenergy.com/114.114.114.114
 server=/gzsenzheng.com/114.114.114.114
 server=/gzsewage.com/114.114.114.114
 server=/gzsgczb.com/114.114.114.114
