--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86416,6 +86416,7 @@ server=/wangjunwei.com/114.114.114.114
 server=/wangkangzhong.com/114.114.114.114
 server=/wangkewang.com/114.114.114.114
 server=/wangkl.com/114.114.114.114
+server=/wangkong.com/114.114.114.114
 server=/wanglanying.com/114.114.114.114
 server=/wangle.com/114.114.114.114
 server=/wangling.net/114.114.114.114
