--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38610,6 +38610,7 @@ server=/gz-huayuan.com/114.114.114.114
 server=/gz-julong.com/114.114.114.114
 server=/gz-junan.com/114.114.114.114
 server=/gz-lodihair.com/114.114.114.114
+server=/gz-mrt.com/114.114.114.114
 server=/gz-notary.com/114.114.114.114
 server=/gz-shanguang.com/114.114.114.114
 server=/gz-spi.com/114.114.114.114
