accelerated-domains: add ghcec.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34238,6 +34238,7 @@ server=/ghatg.com/114.114.114.114
 server=/ghboke.com/114.114.114.114
 server=/ghbxrj.com/114.114.114.114
 server=/ghc168.com/114.114.114.114
+server=/ghcec.com/114.114.114.114
 server=/ghcis.com/114.114.114.114
 server=/ghcxzb.com/114.114.114.114
 server=/gheigot.com/114.114.114.114
