--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38619,6 +38619,7 @@ server=/gz-tencentclb.cloud/114.114.114.114
 server=/gz-wx.com/114.114.114.114
 server=/gz-xinghe.com/114.114.114.114
 server=/gz-xinyu.com/114.114.114.114
+server=/gz-xt.com/114.114.114.114
 server=/gz-zhongshang.com/114.114.114.114
 server=/gz.com/114.114.114.114
 server=/gz007.net/114.114.114.114
