--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16915,6 +16915,7 @@ server=/bys120.com/114.114.114.114
 server=/bysb.net/114.114.114.114
 server=/byshr.com/114.114.114.114
 server=/bysocket.com/114.114.114.114
+server=/byspharm.com/114.114.114.114
 server=/bystack.com/114.114.114.114
 server=/bystatic.com/114.114.114.114
 server=/bysxfz.com/114.114.114.114
