accelerated-domains: add mice-gz.org

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60278,6 +60278,7 @@ server=/micai315.com/114.114.114.114
 server=/micaihu.net/114.114.114.114
 server=/micaiying.com/114.114.114.114
 server=/micblo.com/114.114.114.114
+server=/mice-gz.org/114.114.114.114
 server=/micecn.com/114.114.114.114
 server=/michael-j.net/114.114.114.114
 server=/michaelapp.com/114.114.114.114
