--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73316,6 +73316,7 @@ server=/sciping.com/114.114.114.114
 server=/sciscanpub.com/114.114.114.114
 server=/scisky.com/114.114.114.114
 server=/scistor.com/114.114.114.114
+server=/scisun.com/114.114.114.114
 server=/scitycase.com/114.114.114.114
 server=/scixh.com/114.114.114.114
 server=/sciyard.com/114.114.114.114
