accelerated-domains: add tyzs8.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83878,6 +83878,7 @@ server=/tyyujie.com/114.114.114.114
 server=/tyzh.com/114.114.114.114
 server=/tyzhjx.com/114.114.114.114
 server=/tyzhyun.com/114.114.114.114
+server=/tyzs8.com/114.114.114.114
 server=/tyztwhyy.com/114.114.114.114
 server=/tz-dsp.com/114.114.114.114
 server=/tz-water.com/114.114.114.114
