accelerated-domains: add geekclo.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33812,6 +33812,7 @@ server=/geekbang.org/114.114.114.114
 server=/geekbangtech.com/114.114.114.114
 server=/geekcar.com/114.114.114.114
 server=/geekcar.net/114.114.114.114
+server=/geekclo.com/114.114.114.114
 server=/geekdata.com/114.114.114.114
 server=/geekdaxue.co/114.114.114.114
 server=/geekdive.com/114.114.114.114
