accelerated-domains: add glcablesy.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34544,6 +34544,7 @@ server=/glblkq.com/114.114.114.114
 server=/glby118.com/114.114.114.114
 server=/glbyhotel.com/114.114.114.114
 server=/glbyjdjt.com/114.114.114.114
+server=/glcablesy.com/114.114.114.114
 server=/glcanyin.net/114.114.114.114
 server=/glcape.com/114.114.114.114
 server=/glcct.com/114.114.114.114
