accelerated-domains: add guangzhouxiehe.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35905,6 +35905,7 @@ server=/guangzhou-logistics.com/114.114.114.114
 server=/guangzhou-marathon.com/114.114.114.114
 server=/guangzhouamc.com/114.114.114.114
 server=/guangzhougy.com/114.114.114.114
+server=/guangzhouxiehe.com/114.114.114.114
 server=/guangzhouyibo.com/114.114.114.114
 server=/guangzhouyizheng.com/114.114.114.114
 server=/guangzhouzaiyu.com/114.114.114.114
