accelerated-domains: add gzlawyer.org

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38841,6 +38841,7 @@ server=/gzkunmao.com/114.114.114.114
 server=/gzkydzyyy.com/114.114.114.114
 server=/gzkz88.com/114.114.114.114
 server=/gzlarc.com/114.114.114.114
+server=/gzlawyer.org/114.114.114.114
 server=/gzlayl.com/114.114.114.114
 server=/gzlex.com/114.114.114.114
 server=/gzli.com/114.114.114.114
