--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38754,6 +38754,7 @@ server=/gzhangcha.com/114.114.114.114
 server=/gzhatao.com/114.114.114.114
 server=/gzhc365.com/114.114.114.114
 server=/gzhclw.com/114.114.114.114
+server=/gzhcpcb.com/114.114.114.114
 server=/gzhd.net/114.114.114.114
 server=/gzhd56.com/114.114.114.114
 server=/gzhdcs.com/114.114.114.114
