accelerated-domains: add star-meeting.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78246,6 +78246,7 @@ server=/stanlyview.com/114.114.114.114
 server=/staofchina.com/114.114.114.114
 server=/star-engine.com/114.114.114.114
 server=/star-kid.com/114.114.114.114
+server=/star-meeting.com/114.114.114.114
 server=/star-new-material.com/114.114.114.114
 server=/star-river.com/114.114.114.114
 server=/star1024.com/114.114.114.114
