accelerated-domains: add sjjt001.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76791,6 +76791,7 @@ server=/sjhykt.com/114.114.114.114
 server=/sjizx.com/114.114.114.114
 server=/sjjk.shop/114.114.114.114
 server=/sjjob88.com/114.114.114.114
+server=/sjjt001.com/114.114.114.114
 server=/sjjzm.com/114.114.114.114
 server=/sjkj.net/114.114.114.114
 server=/sjlbearing.com/114.114.114.114
