--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38768,6 +38768,7 @@ server=/gzhm.com/114.114.114.114
 server=/gzhornet.com/114.114.114.114
 server=/gzhotelgroup.com/114.114.114.114
 server=/gzhpaier.com/114.114.114.114
+server=/gzhpgroup.com/114.114.114.114
 server=/gzhphb.com/114.114.114.114
 server=/gzhtdz.com/114.114.114.114
 server=/gzhtinfo.com/114.114.114.114
