accelerated-domains: add dwwin.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -28111,6 +28111,7 @@ server=/dwstock.com/114.114.114.114
 server=/dwt.life/114.114.114.114
 server=/dwtedx.com/114.114.114.114
 server=/dww11.com/114.114.114.114
+server=/dwwin.com/114.114.114.114
 server=/dwxw.net/114.114.114.114
 server=/dwxyamaha.com/114.114.114.114
 server=/dwyeuy.com/114.114.114.114
