--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89648,6 +89648,7 @@ server=/wuzhicms.com/114.114.114.114
 server=/wuzhiq.com/114.114.114.114
 server=/wuzhiwei.net/114.114.114.114
 server=/wuzhoucj.com/114.114.114.114
+server=/wuzhoucloud.com/114.114.114.114
 server=/wuzhoudonghui.com/114.114.114.114
 server=/wuzhouqianzheng.com/114.114.114.114
 server=/wuzhourcw.com/114.114.114.114
