--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25988,6 +25988,7 @@ server=/dhboy.com/114.114.114.114
 server=/dhgfhgsfg.com/114.114.114.114
 server=/dhgsqjcnm.com/114.114.114.114
 server=/dhguanye.com/114.114.114.114
+server=/dhh-gz.com/114.114.114.114
 server=/dhhqfw.com/114.114.114.114
 server=/dhimavision.com/114.114.114.114
 server=/dhj3413.com/114.114.114.114
