accelerated-domains: add hboxs.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40333,6 +40333,7 @@ server=/hbneww.com/114.114.114.114
 server=/hbnholdings.com/114.114.114.114
 server=/hbnxb.net/114.114.114.114
 server=/hbooker.com/114.114.114.114
+server=/hboxs.com/114.114.114.114
 server=/hbpangu.net/114.114.114.114
 server=/hbpch.com/114.114.114.114
 server=/hbpengxi.com/114.114.114.114
