--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38877,6 +38877,7 @@ server=/gzminjia.com/114.114.114.114
 server=/gzmiyuan.com/114.114.114.114
 server=/gzmjhzs.com/114.114.114.114
 server=/gzmlfcyy.com/114.114.114.114
+server=/gzmofa.com/114.114.114.114
 server=/gzmould.com/114.114.114.114
 server=/gzmpc.com/114.114.114.114
 server=/gzmri.com/114.114.114.114
