--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38923,6 +38923,7 @@ server=/gzqsts.com/114.114.114.114
 server=/gzqunsheng.com/114.114.114.114
 server=/gzqygl.com/114.114.114.114
 server=/gzrand.com/114.114.114.114
+server=/gzrandr.com/114.114.114.114
 server=/gzrch.com/114.114.114.114
 server=/gzrcqf.com/114.114.114.114
 server=/gzrecruit.com/114.114.114.114
