accelerated-domains: add gzkcsjw.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38837,6 +38837,7 @@ server=/gzkaiheng.com/114.114.114.114
 server=/gzkaiyue.com/114.114.114.114
 server=/gzkangyuan.com/114.114.114.114
 server=/gzkcsj.com/114.114.114.114
+server=/gzkcsjw.com/114.114.114.114
 server=/gzkeeyun.com/114.114.114.114
 server=/gzking.com/114.114.114.114
 server=/gzkmring.com/114.114.114.114
