--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38671,6 +38671,7 @@ server=/gzbzsport.com/114.114.114.114
 server=/gzcablec.com/114.114.114.114
 server=/gzcancer.com/114.114.114.114
 server=/gzcars.net/114.114.114.114
+server=/gzccigroup.com/114.114.114.114
 server=/gzch120.com/114.114.114.114
 server=/gzch12333.com/114.114.114.114
 server=/gzchangke.com/114.114.114.114
