accelerated-domains: add suiunited.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78648,6 +78648,7 @@ server=/suishouzj.com/114.114.114.114
 server=/suisuihu.com/114.114.114.114
 server=/suisuijiang.com/114.114.114.114
 server=/suitaichem.com/114.114.114.114
+server=/suiunited.com/114.114.114.114
 server=/suixianwang.net/114.114.114.114
 server=/suixin8.com/114.114.114.114
 server=/suixinfei.icu/114.114.114.114
