--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -38697,6 +38697,7 @@ server=/gzdaily.com/114.114.114.114
 server=/gzdaochen.com/114.114.114.114
 server=/gzdaqi.com/114.114.114.114
 server=/gzdata.net/114.114.114.114
+server=/gzdayue.com/114.114.114.114
 server=/gzdbx.com/114.114.114.114
 server=/gzdcsmt.com/114.114.114.114
 server=/gzdensity.com/114.114.114.114
