accelerated-domains: add yracc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -97440,6 +97440,7 @@ server=/yr-info.com/114.114.114.114
 server=/yr17.net/114.114.114.114
 server=/yr3.com/114.114.114.114
 server=/yra2.com/114.114.114.114
+server=/yracc.com/114.114.114.114
 server=/yrapp.net/114.114.114.114
 server=/yrcbank.com/114.114.114.114
 server=/yrdart.com/114.114.114.114
