accelerated-domains: add jiayue.tech

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49127,6 +49127,7 @@ server=/jiayuan-law.com/114.114.114.114
 server=/jiayuan.com/114.114.114.114
 server=/jiayuanzhang.com/114.114.114.114
 server=/jiayudata.com/114.114.114.114
+server=/jiayue.tech/114.114.114.114
 server=/jiayuehua.com/114.114.114.114
 server=/jiayuhongwedding.com/114.114.114.114
 server=/jiayusx.com/114.114.114.114
