accelerated-domains: add zjairports.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -101530,6 +101530,7 @@ server=/zjaf.net/114.114.114.114
 server=/zjags.com/114.114.114.114
 server=/zjai.xyz/114.114.114.114
 server=/zjaikang.com/114.114.114.114
+server=/zjairports.com/114.114.114.114
 server=/zjaqxy.com/114.114.114.114
 server=/zjautoparts.com/114.114.114.114
 server=/zjbaixiang.com/114.114.114.114
