--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45140,6 +45140,7 @@ server=/hzywinf.com/114.114.114.114
 server=/hzyys.com/114.114.114.114
 server=/hzyz.net/114.114.114.114
 server=/hzyzxx.net/114.114.114.114
+server=/hzzbco.com/114.114.114.114
 server=/hzzhaobiao.com/114.114.114.114
 server=/hzzhileng.com/114.114.114.114
 server=/hzzhyl.com/114.114.114.114
