--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45023,6 +45023,7 @@ server=/hzlange.com/114.114.114.114
 server=/hzleshun.com/114.114.114.114
 server=/hzlingxing.com/114.114.114.114
 server=/hzljlyy.com/114.114.114.114
+server=/hzlqgroup.com/114.114.114.114
 server=/hzlug.org/114.114.114.114
 server=/hzlyhs.com/114.114.114.114
 server=/hzmama.net/114.114.114.114
