accelerated-domains: add hzsunup.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45086,6 +45086,7 @@ server=/hzsswjt.com/114.114.114.114
 server=/hzstad88.com/114.114.114.114
 server=/hzstar.com/114.114.114.114
 server=/hzstlzxyy.com/114.114.114.114
+server=/hzsunup.com/114.114.114.114
 server=/hzswysyy.com/114.114.114.114
 server=/hzszls.com/114.114.114.114
 server=/hzszyyy.com/114.114.114.114
