--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45143,6 +45143,7 @@ server=/hzyys.com/114.114.114.114
 server=/hzyz.net/114.114.114.114
 server=/hzyzxx.net/114.114.114.114
 server=/hzzbco.com/114.114.114.114
+server=/hzzh.com/114.114.114.114
 server=/hzzhaobiao.com/114.114.114.114
 server=/hzzhileng.com/114.114.114.114
 server=/hzzhyl.com/114.114.114.114
