--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -78998,6 +78998,7 @@ server=/surveyhills.com/114.114.114.114
 server=/surveyrtk.com/114.114.114.114
 server=/surveyunion.com/114.114.114.114
 server=/survivor99.com/114.114.114.114
+server=/surwit.com/114.114.114.114
 server=/suseage.com/114.114.114.114
 server=/sushijiameng.com/114.114.114.114
 server=/sushiyanglao.com/114.114.114.114
