--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51649,6 +51649,7 @@ server=/juyouxuan.vip/114.114.114.114
 server=/juyuewang.net/114.114.114.114
 server=/juyun.tv/114.114.114.114
 server=/juyutube.com/114.114.114.114
+server=/juyuweb.net/114.114.114.114
 server=/juzhen.com/114.114.114.114
 server=/juzhen.io/114.114.114.114
 server=/juzhentech.com/114.114.114.114
