accelerated-domains: add westlakeinst.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87720,6 +87720,7 @@ server=/westengine.com/114.114.114.114
 server=/westernxtheshow.com/114.114.114.114
 server=/westfutu.com/114.114.114.114
 server=/westinfosoft.com/114.114.114.114
+server=/westlakeinst.com/114.114.114.114
 server=/westleadfund.com/114.114.114.114
 server=/westmining.com/114.114.114.114
 server=/westonecloud.com/114.114.114.114
