--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73951,6 +73951,7 @@ server=/segotep.com/114.114.114.114
 server=/segwayrobotics.com/114.114.114.114
 server=/sehimalayanqj.com/114.114.114.114
 server=/sehnam.com/114.114.114.114
+server=/seida.tech/114.114.114.114
 server=/seilway.com/114.114.114.114
 server=/seily.com/114.114.114.114
 server=/seirobotics.net/114.114.114.114
