--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18607,6 +18607,7 @@ server=/celiang.net/114.114.114.114
 server=/celinlawyers.com/114.114.114.114
 server=/celiss.com/114.114.114.114
 server=/cell-gene.com/114.114.114.114
+server=/cell-origin.com/114.114.114.114
 server=/cellcook.com/114.114.114.114
 server=/cellixsoft.com/114.114.114.114
 server=/cellocation.com/114.114.114.114
