--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -28261,6 +28261,7 @@ server=/dymexhealthcare.com/114.114.114.114
 server=/dymusictape.com/114.114.114.114
 server=/dymusicvideo.com/114.114.114.114
 server=/dyna-rc.com/114.114.114.114
+server=/dynabook-dbh.com/114.114.114.114
 server=/dynavolt.net/114.114.114.114
 server=/dyonr.com/114.114.114.114
 server=/dyqc.com/114.114.114.114
