--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33919,6 +33919,7 @@ server=/genepharma.com/114.114.114.114
 server=/generalfushi.com/114.114.114.114
 server=/generalichina.com/114.114.114.114
 server=/generalwatertech.com/114.114.114.114
+server=/genergy-technology.com/114.114.114.114
 server=/genericfixer.com/114.114.114.114
 server=/generosbio.com/114.114.114.114
 server=/genesis-rock.com/114.114.114.114
