accelerated-domains: add hztchj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45094,6 +45094,7 @@ server=/hzswysyy.com/114.114.114.114
 server=/hzszls.com/114.114.114.114
 server=/hzszyyy.com/114.114.114.114
 server=/hzt2006.com/114.114.114.114
+server=/hztchj.com/114.114.114.114
 server=/hzteaexpo.com/114.114.114.114
 server=/hztek.com/114.114.114.114
 server=/hzthinker.net/114.114.114.114
