--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -75013,6 +75013,7 @@ server=/shengyizhuanjia.com/114.114.114.114
 server=/shengyuancc.com/114.114.114.114
 server=/shengzehr.com/114.114.114.114
 server=/shengzhaoli.com/114.114.114.114
+server=/shenhaoinfo.com/114.114.114.114
 server=/shenhexin.com/114.114.114.114
 server=/shenhexin.vip/114.114.114.114
 server=/shenhongfei.com/114.114.114.114
