accelerated-domains: add solanyun.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77556,6 +77556,7 @@ server=/sokuba.com/114.114.114.114
 server=/sokutu.com/114.114.114.114
 server=/sokyotw.com/114.114.114.114
 server=/solaking.com/114.114.114.114
+server=/solanyun.com/114.114.114.114
 server=/solar-engine.com/114.114.114.114
 server=/solarbe.com/114.114.114.114
 server=/solarbio.com/114.114.114.114
