--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -92220,6 +92220,7 @@ server=/xinzlkj.com/114.114.114.114
 server=/xinzuhe.com/114.114.114.114
 server=/xinzushenghuo.com/114.114.114.114
 server=/xioagege587skjdo.com/114.114.114.114
+server=/xiolift.com/114.114.114.114
 server=/xionganxinxi.com/114.114.114.114
 server=/xiongbagk.com/114.114.114.114
 server=/xiongbeng.com/114.114.114.114
