accelerated-domains: add hzyllh.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45134,6 +45134,7 @@ server=/hzyanglao.com/114.114.114.114
 server=/hzyestar.com/114.114.114.114
 server=/hzyhzp.com/114.114.114.114
 server=/hzyidc.com/114.114.114.114
+server=/hzyllh.com/114.114.114.114
 server=/hzylpco.com/114.114.114.114
 server=/hzyn888.com/114.114.114.114
 server=/hzyoka.com/114.114.114.114
