--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61301,6 +61301,7 @@ server=/molbase.com/114.114.114.114
 server=/molbase.net/114.114.114.114
 server=/molcoo.com/114.114.114.114
 server=/moldinginductor.com/114.114.114.114
+server=/moldnano.com/114.114.114.114
 server=/molefitting.com/114.114.114.114
 server=/molegu.com/114.114.114.114
 server=/molerose.com/114.114.114.114
