accelerated-domains: add brother-bsh.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16341,6 +16341,7 @@ server=/broadview-auto.com/114.114.114.114
 server=/brocktonchristian.com/114.114.114.114
 server=/bronzesoft.com/114.114.114.114
 server=/broqiang.com/114.114.114.114
+server=/brother-bsh.com/114.114.114.114
 server=/brother-cn.net/114.114.114.114
 server=/brother-movie.com/114.114.114.114
 server=/brother.co.jp/114.114.114.114
