--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -28417,6 +28417,7 @@ server=/e-bidding.org/114.114.114.114
 server=/e-bq.com/114.114.114.114
 server=/e-bq.org/114.114.114.114
 server=/e-buychina.com/114.114.114.114
+server=/e-byte.com/114.114.114.114
 server=/e-celap.com/114.114.114.114
 server=/e-chinalife.com/114.114.114.114
 server=/e-cloudstore.com/114.114.114.114
