--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32598,6 +32598,7 @@ server=/full-way.com/114.114.114.114
 server=/fullhan.com/114.114.114.114
 server=/fullics.com/114.114.114.114
 server=/fulllinks.com/114.114.114.114
+server=/fullsemitech.com/114.114.114.114
 server=/fullstack.love/114.114.114.114
 server=/fulou.life/114.114.114.114
 server=/fultree.com/114.114.114.114
