accelerated-domains: add isv-tech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -47444,6 +47444,7 @@ server=/isunon.com/114.114.114.114
 server=/isunton.com/114.114.114.114
 server=/isurecloud.net/114.114.114.114
 server=/isuzhou.me/114.114.114.114
+server=/isv-tech.com/114.114.114.114
 server=/isvee.com/114.114.114.114
 server=/isvjcloud.com/114.114.114.114
 server=/isvjd.com/114.114.114.114
