accelerated-domains: add wgmotor.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87842,6 +87842,7 @@ server=/wglh.com/114.114.114.114
 server=/wglm.net/114.114.114.114
 server=/wgm66.com/114.114.114.114
 server=/wgmf.com/114.114.114.114
+server=/wgmotor.com/114.114.114.114
 server=/wgnds.com/114.114.114.114
 server=/wgnpq.com/114.114.114.114
 server=/wgoic.com/114.114.114.114
