--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61328,6 +61328,7 @@ server=/molixiangce.com/114.114.114.114
 server=/molizm.com/114.114.114.114
 server=/molpmh.xyz/114.114.114.114
 server=/molygoo.com/114.114.114.114
+server=/moma-hz.com/114.114.114.114
 server=/mombuybuy.com/114.114.114.114
 server=/momentad.com/114.114.114.114
 server=/momentcake.com/114.114.114.114
