--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20378,6 +20378,7 @@ server=/chinawanbang.com/114.114.114.114
 server=/chinawanda.com/114.114.114.114
 server=/chinawatchnet.com/114.114.114.114
 server=/chinawaterexpo.com/114.114.114.114
+server=/chinawatertech.com/114.114.114.114
 server=/chinawbk.com/114.114.114.114
 server=/chinawch.com/114.114.114.114
 server=/chinawebber.com/114.114.114.114
