--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45004,6 +45004,7 @@ server=/hzj7.com/114.114.114.114
 server=/hzjbzg.com/114.114.114.114
 server=/hzjcbg.com/114.114.114.114
 server=/hzjcp.com/114.114.114.114
+server=/hzjcqczl.com/114.114.114.114
 server=/hzjiantong.com/114.114.114.114
 server=/hzjie7.com/114.114.114.114
 server=/hzjingxian.com/114.114.114.114
