accelerated-domains: add bosomchina.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16170,6 +16170,7 @@ server=/bosideng.net/114.114.114.114
 server=/bosigame.com/114.114.114.114
 server=/bosmaa.com/114.114.114.114
 server=/boso.ltd/114.114.114.114
+server=/bosomchina.com/114.114.114.114
 server=/bosondata.net/114.114.114.114
 server=/bosong.online/114.114.114.114
 server=/bosonnlp.com/114.114.114.114
