accelerated-domains: add hnechz.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42209,6 +42209,7 @@ server=/hndscg.com/114.114.114.114
 server=/hndt.com/114.114.114.114
 server=/hndxzte.com/114.114.114.114
 server=/hndybus.com/114.114.114.114
+server=/hnechz.com/114.114.114.114
 server=/hnedition.com/114.114.114.114
 server=/hnedutv.com/114.114.114.114
 server=/hnemb.com/114.114.114.114
