accelerated-domains: add china-yd.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19742,6 +19742,7 @@ server=/china-xian.com/114.114.114.114
 server=/china-xiba.com/114.114.114.114
 server=/china-yaguang.com/114.114.114.114
 server=/china-yansheng.com/114.114.114.114
+server=/china-yd.com/114.114.114.114
 server=/china-yida.com/114.114.114.114
 server=/china-yuli.com/114.114.114.114
 server=/china-yulin.com/114.114.114.114
