accelerated-domains: add cdtlev.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -18488,6 +18488,7 @@ server=/cdt-re.com/114.114.114.114
 server=/cdtaishan.com/114.114.114.114
 server=/cdtfn2t.icu/114.114.114.114
 server=/cdtianda.com/114.114.114.114
+server=/cdtlev.com/114.114.114.114
 server=/cdtlxx.net/114.114.114.114
 server=/cdtyxx999.com/114.114.114.114
 server=/cdtz.net/114.114.114.114
