--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43152,6 +43152,7 @@ server=/hrwuu.com/114.114.114.114
 server=/hrxiongan.com/114.114.114.114
 server=/hrxz.com/114.114.114.114
 server=/hrzy.cc/114.114.114.114
+server=/hs-biopharm.com/114.114.114.114
 server=/hs-defense.com/114.114.114.114
 server=/hs-fe.com/114.114.114.114
 server=/hs-outlets.com/114.114.114.114
