accelerated-domains: add phaenothera.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67053,6 +67053,7 @@ server=/pgzs.com/114.114.114.114
 server=/pgzx.net/114.114.114.114
 server=/ph-fc.com/114.114.114.114
 server=/ph66.com/114.114.114.114
+server=/phaenothera.com/114.114.114.114
 server=/phaetonsemi.com/114.114.114.114
 server=/phalapi.net/114.114.114.114
 server=/phantasy.life/114.114.114.114
