accelerated-domains: add xzbco.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94278,6 +94278,7 @@ server=/xz6y.com/114.114.114.114
 server=/xz8.com/114.114.114.114
 server=/xzairport.com/114.114.114.114
 server=/xzb360.com/114.114.114.114
+server=/xzbco.com/114.114.114.114
 server=/xzbhfk.com/114.114.114.114
 server=/xzbu.com/114.114.114.114
 server=/xzbzq.com/114.114.114.114
