accelerated-domains: add kelinpower.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -52807,6 +52807,7 @@ server=/keliangtek.com/114.114.114.114
 server=/kelibiao.com/114.114.114.114
 server=/kelilens.com/114.114.114.114
 server=/kelimotor.com/114.114.114.114
+server=/kelinpower.com/114.114.114.114
 server=/kelinsoft.com/114.114.114.114
 server=/kelkjj.com/114.114.114.114
 server=/kelon.com/114.114.114.114
