--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -80388,6 +80388,7 @@ server=/taiwanwii.com/114.114.114.114
 server=/taiwu.com/114.114.114.114
 server=/taixi.cc/114.114.114.114
 server=/taixingren.com/114.114.114.114
+server=/taixirobot.com/114.114.114.114
 server=/taixsw.com/114.114.114.114
 server=/taixubio.com/114.114.114.114
 server=/taixuguoji.com/114.114.114.114
