--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21059,6 +21059,7 @@ server=/circleharmonyhealth.com/114.114.114.114
 server=/circuitboardchips.com/114.114.114.114
 server=/cirmall.com/114.114.114.114
 server=/cirrowings.com/114.114.114.114
+server=/cirs-ck.com/114.114.114.114
 server=/cirs-group.com/114.114.114.114
 server=/cirs-reach.com/114.114.114.114
 server=/cirunzhang.com/114.114.114.114
