accelerated-domains: add cnlandfill.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22208,6 +22208,7 @@ server=/cnkosun.com/114.114.114.114
 server=/cnkpgs.com/114.114.114.114
 server=/cnkuai.com/114.114.114.114
 server=/cnky.net/114.114.114.114
+server=/cnlandfill.net/114.114.114.114
 server=/cnlang.org/114.114.114.114
 server=/cnlaw.net/114.114.114.114
 server=/cnlawweb.net/114.114.114.114
