--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44886,6 +44886,7 @@ server=/hyznjs.com/114.114.114.114
 server=/hyzqxsb.com/114.114.114.114
 server=/hyzui.com/114.114.114.114
 server=/hz-alw.com/114.114.114.114
+server=/hz-ch.com/114.114.114.114
 server=/hz-etest.com/114.114.114.114
 server=/hz-expo.com/114.114.114.114
 server=/hz-gn.com/114.114.114.114
