--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -57257,6 +57257,7 @@ server=/longquan-baojian.com/114.114.114.114
 server=/longquecdn.com/114.114.114.114
 server=/longre.com/114.114.114.114
 server=/longsan.com/114.114.114.114
+server=/longshanchemical.com/114.114.114.114
 server=/longshangrc.com/114.114.114.114
 server=/longsheng.com/114.114.114.114
 server=/longsheng.pw/114.114.114.114
