accelerated-domains: add tsingtek.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83182,6 +83182,7 @@ server=/tsingming.com/114.114.114.114
 server=/tsingoofoods.com/114.114.114.114
 server=/tsingpost.com/114.114.114.114
 server=/tsingshang.com/114.114.114.114
+server=/tsingtek.com/114.114.114.114
 server=/tsingtoo.com/114.114.114.114
 server=/tsingtuo.com/114.114.114.114
 server=/tsingyanresearch.com/114.114.114.114
