accelerated-domains: add cobetterfiltration.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -22571,6 +22571,7 @@ server=/coantec.com/114.114.114.114
 server=/coaoo.com/114.114.114.114
 server=/coatingol.com/114.114.114.114
 server=/cobenet.com/114.114.114.114
+server=/cobetterfiltration.com/114.114.114.114
 server=/cobioer.com/114.114.114.114
 server=/coboak.com/114.114.114.114
 server=/cobvgroup.com/114.114.114.114
