--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -28574,6 +28574,7 @@ server=/easeslb.com/114.114.114.114
 server=/easetuner.com/114.114.114.114
 server=/easeus.com/114.114.114.114
 server=/easeyedelivery.com/114.114.114.114
+server=/easi-tech.com/114.114.114.114
 server=/easilysend.com/114.114.114.114
 server=/easitcn.com/114.114.114.114
 server=/easonad.com/114.114.114.114
