--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41637,6 +41637,7 @@ server=/highdigitizing.com/114.114.114.114
 server=/highenergyaerospace.com/114.114.114.114
 server=/highfel.com/114.114.114.114
 server=/highgo.com/114.114.114.114
+server=/highleveltrans.com/114.114.114.114
 server=/highlightoptics.com/114.114.114.114
 server=/highlionceramic.com/114.114.114.114
 server=/highlm.com/114.114.114.114
