accelerated-domains: add hzcctech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44938,6 +44938,7 @@ server=/hzc.com/114.114.114.114
 server=/hzcbparking.com/114.114.114.114
 server=/hzccb.net/114.114.114.114
 server=/hzccnet.com/114.114.114.114
+server=/hzcctech.com/114.114.114.114
 server=/hzcd120.com/114.114.114.114
 server=/hzcda.com/114.114.114.114
 server=/hzcdhcyy.com/114.114.114.114
