--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44970,6 +44970,7 @@ server=/hzdsrmyy.com/114.114.114.114
 server=/hzdtv.tv/114.114.114.114
 server=/hzdx.com/114.114.114.114
 server=/hzecsemir.com/114.114.114.114
+server=/hzeeec.com/114.114.114.114
 server=/hzefjs.com/114.114.114.114
 server=/hzeg.com/114.114.114.114
 server=/hzelec.com/114.114.114.114
