accelerated-domains: add xqmice.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -93257,6 +93257,7 @@ server=/xqjmzc.com/114.114.114.114
 server=/xqjs.net/114.114.114.114
 server=/xqmdc.com/114.114.114.114
 server=/xqmgm.com/114.114.114.114
+server=/xqmice.com/114.114.114.114
 server=/xqnmz.com/114.114.114.114
 server=/xqnwfdl.com/114.114.114.114
 server=/xqppt.com/114.114.114.114
