--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23537,6 +23537,7 @@ server=/crx.plus/114.114.114.114
 server=/crx4.com/114.114.114.114
 server=/cry33.com/114.114.114.114
 server=/crym.cc/114.114.114.114
+server=/crysound.com/114.114.114.114
 server=/crystalcg.com/114.114.114.114
 server=/crystaledu.com/114.114.114.114
 server=/cryuantafund.com/114.114.114.114
