accelerated-domains: add jufenginfo.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -51388,6 +51388,7 @@ server=/jufair.com/114.114.114.114
 server=/jufeng313.com/114.114.114.114
 server=/jufengcap.com/114.114.114.114
 server=/jufengcompany.com/114.114.114.114
+server=/jufenginfo.com/114.114.114.114
 server=/jufengputao.com/114.114.114.114
 server=/jufengshang.com/114.114.114.114
 server=/jufengwuxi.com/114.114.114.114
