--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45921,6 +45921,7 @@ server=/iegcom.com/114.114.114.114
 server=/iegee.net/114.114.114.114
 server=/iegi-sd.com/114.114.114.114
 server=/iegourl.com/114.114.114.114
+server=/ieh-hz.com/114.114.114.114
 server=/iehou.com/114.114.114.114
 server=/ieisystem.com/114.114.114.114
 server=/iejiu.com/114.114.114.114
