--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50420,6 +50420,7 @@ server=/jmd-china.com/114.114.114.114
 server=/jmd-leatherbag.com/114.114.114.114
 server=/jmdedu.com/114.114.114.114
 server=/jmdna.com/114.114.114.114
+server=/jmed.com/114.114.114.114
 server=/jmeii.com/114.114.114.114
 server=/jmeizs.com/114.114.114.114
 server=/jmgle.com/114.114.114.114
