accelerated-domains: add firstpvm.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31635,6 +31635,7 @@ server=/firstlinkapp.com/114.114.114.114
 server=/firstonesource.com/114.114.114.114
 server=/firstp2p.com/114.114.114.114
 server=/firstproduction.net/114.114.114.114
+server=/firstpvm.com/114.114.114.114
 server=/firsunbioscience.com/114.114.114.114
 server=/firwinds.site/114.114.114.114
 server=/fiscan007.com/114.114.114.114
