--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39585,6 +39585,7 @@ server=/hangcha-forklift.com/114.114.114.114
 server=/hangchow.org/114.114.114.114
 server=/hangdaowangluo.com/114.114.114.114
 server=/hangdaxinli.com/114.114.114.114
+server=/hangdianzhizao.com/114.114.114.114
 server=/hangduhc.com/114.114.114.114
 server=/hangewei.com/114.114.114.114
 server=/hangfkj.com/114.114.114.114
