accelerated-domains: add jiebai.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49219,6 +49219,7 @@ server=/jidujiao.com/114.114.114.114
 server=/jidujiasu.com/114.114.114.114
 server=/jidukeji.com/114.114.114.114
 server=/jieanjiaotong.com/114.114.114.114
+server=/jiebai.com/114.114.114.114
 server=/jiebaodz.com/114.114.114.114
 server=/jiebide.xin/114.114.114.114
 server=/jiecao.com/114.114.114.114
