accelerated-domains: add sator.tech

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73058,6 +73058,7 @@ server=/sast.fun/114.114.114.114
 server=/sast.net/114.114.114.114
 server=/sat0.net/114.114.114.114
 server=/sating-tech.com/114.114.114.114
+server=/sator.tech/114.114.114.114
 server=/satrip.com/114.114.114.114
 server=/saturnbird.com/114.114.114.114
 server=/saublenew.com/114.114.114.114
