accelerated-domains: add sikantech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76431,6 +76431,7 @@ server=/sijinchuanbo.com/114.114.114.114
 server=/sijitao.net/114.114.114.114
 server=/sijiwater.com/114.114.114.114
 server=/sijiweinong.com/114.114.114.114
+server=/sikantech.com/114.114.114.114
 server=/sikem.net/114.114.114.114
 server=/sikiedu.com/114.114.114.114
 server=/sikncs.com/114.114.114.114
