--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84550,6 +84550,7 @@ server=/uniham.net/114.114.114.114
 server=/unihertz.com/114.114.114.114
 server=/unilaw.net/114.114.114.114
 server=/unilz588.com/114.114.114.114
+server=/unimasdata.com/114.114.114.114
 server=/unimtx.com/114.114.114.114
 server=/uninf.com/114.114.114.114
 server=/uninstall-tools.com/114.114.114.114
