accelerated-domains: add guoshengtech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -36257,6 +36257,7 @@ server=/guorentao.com/114.114.114.114
 server=/guorongfei.com/114.114.114.114
 server=/guoruiinfo.com/114.114.114.114
 server=/guoruijx.com/114.114.114.114
+server=/guoshengtech.com/114.114.114.114
 server=/guoshi.com/114.114.114.114
 server=/guoshusir.com/114.114.114.114
 server=/guosujt.com/114.114.114.114
