accelerated-domains: add bmser.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -15850,6 +15850,7 @@ server=/bmqy.net/114.114.114.114
 server=/bmrtech.com/114.114.114.114
 server=/bmrtjt.com/114.114.114.114
 server=/bms16.com/114.114.114.114
+server=/bmser.com/114.114.114.114
 server=/bmshow.com/114.114.114.114
 server=/bmvps.com/114.114.114.114
 server=/bmw8033.com/114.114.114.114
