accelerated-domains: add chinaadvance.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -19777,6 +19777,7 @@ server=/china9y.com/114.114.114.114
 server=/chinaacc.com/114.114.114.114
 server=/chinaacryl.com/114.114.114.114
 server=/chinaadec.com/114.114.114.114
+server=/chinaadvance.com/114.114.114.114
 server=/chinaaet.com/114.114.114.114
 server=/chinaagrisci.com/114.114.114.114
 server=/chinaags.net/114.114.114.114
