--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25997,6 +25997,7 @@ server=/dhaxhsa325.com/114.114.114.114
 server=/dhb.hk/114.114.114.114
 server=/dhb168.com/114.114.114.114
 server=/dhboy.com/114.114.114.114
+server=/dhchain.com/114.114.114.114
 server=/dhgfhgsfg.com/114.114.114.114
 server=/dhgsqjcnm.com/114.114.114.114
 server=/dhguanye.com/114.114.114.114
