accelerated-domains: add hyzc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44889,6 +44889,7 @@ server=/hyypjs.com/114.114.114.114
 server=/hyyscgs.com/114.114.114.114
 server=/hyyun.com/114.114.114.114
 server=/hyyyy.net/114.114.114.114
+server=/hyzc.com/114.114.114.114
 server=/hyzcservice.com/114.114.114.114
 server=/hyzenhospital.com/114.114.114.114
 server=/hyzhcdn.com/114.114.114.114
