--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45010,6 +45010,7 @@ server=/hzhengtong.com/114.114.114.114
 server=/hzhfzx.com/114.114.114.114
 server=/hzhike.com/114.114.114.114
 server=/hzhisoft.com/114.114.114.114
+server=/hzhkai.com/114.114.114.114
 server=/hzhlpt.com/114.114.114.114
 server=/hzhltec.com/114.114.114.114
 server=/hzhongou.com/114.114.114.114
