--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49857,6 +49857,7 @@ server=/jiqimao.com/114.114.114.114
 server=/jiqirenku.com/114.114.114.114
 server=/jiqish.com/114.114.114.114
 server=/jiqrxx.com/114.114.114.114
+server=/jirehhz.com/114.114.114.114
 server=/jirengu.com/114.114.114.114
 server=/jiri10.com/114.114.114.114
 server=/jiri28.com/114.114.114.114
