accelerated-domains: add psaiwave.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68149,6 +68149,7 @@ server=/ps288.com/114.114.114.114
 server=/ps314.com/114.114.114.114
 server=/ps616.com/114.114.114.114
 server=/ps9d.com/114.114.114.114
+server=/psaiwave.com/114.114.114.114
 server=/psald.com/114.114.114.114
 server=/psb888.com/114.114.114.114
 server=/psbc-ubank.com/114.114.114.114
