--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69829,6 +69829,7 @@ server=/qjwhzs.com/114.114.114.114
 server=/qjwjw.com/114.114.114.114
 server=/qjxgold.com/114.114.114.114
 server=/qjystang.com/114.114.114.114
+server=/qjzl.com/114.114.114.114
 server=/qk365.com/114.114.114.114
 server=/qkagame.com/114.114.114.114
 server=/qkan.com/114.114.114.114
