accelerated-domains: add delixidrive.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25575,6 +25575,7 @@ server=/delishi.com/114.114.114.114
 server=/deliworld.com/114.114.114.114
 server=/delixi-electric.com/114.114.114.114
 server=/delixi.com/114.114.114.114
+server=/delixidrive.com/114.114.114.114
 server=/dell-alw.com/114.114.114.114
 server=/dell027.com/114.114.114.114
 server=/dellecs.com/114.114.114.114
