accelerated-domains: add bioeast.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14847,6 +14847,7 @@ server=/biocome.com/114.114.114.114
 server=/biodiscover.com/114.114.114.114
 server=/biodiscover.net/114.114.114.114
 server=/biodx.com/114.114.114.114
+server=/bioeast.com/114.114.114.114
 server=/biogo.net/114.114.114.114
 server=/biogot.com/114.114.114.114
 server=/bioguoke.com/114.114.114.114
