accelerated-domains: add haokebio.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39895,6 +39895,7 @@ server=/haokan5.com/114.114.114.114
 server=/haokanshipin.com/114.114.114.114
 server=/haokanzhan.com/114.114.114.114
 server=/haokebang.net/114.114.114.114
+server=/haokebio.com/114.114.114.114
 server=/haokecheng.com/114.114.114.114
 server=/haokejie.com/114.114.114.114
 server=/haokeyun.vip/114.114.114.114
