--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45044,6 +45044,7 @@ server=/hzjqhy.com/114.114.114.114
 server=/hzjtfw.com/114.114.114.114
 server=/hzjunglepay.com/114.114.114.114
 server=/hzjuzhi.com/114.114.114.114
+server=/hzjxapp.com/114.114.114.114
 server=/hzjxmd.com/114.114.114.114
 server=/hzjywl.net/114.114.114.114
 server=/hzjzmed.com/114.114.114.114
