accelerated-domains: add sysjoint.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -79556,6 +79556,7 @@ server=/syshospital.com/114.114.114.114
 server=/syshospital.org/114.114.114.114
 server=/syshosts.net/114.114.114.114
 server=/sysjnl.com/114.114.114.114
+server=/sysjoint.com/114.114.114.114
 server=/sysmaster.online/114.114.114.114
 server=/sysmini.com/114.114.114.114
 server=/sysmk120.com/114.114.114.114
