accelerated-domains: add nazhidj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62783,6 +62783,7 @@ server=/naxide.com/114.114.114.114
 server=/nayatec.com/114.114.114.114
 server=/nayei.com/114.114.114.114
 server=/nayuansu.com/114.114.114.114
+server=/nazhidj.com/114.114.114.114
 server=/nazhilong.com/114.114.114.114
 server=/nazo.fun/114.114.114.114
 server=/nb-bailing.com/114.114.114.114
