accelerated-domains: add bioustar.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14878,6 +14878,7 @@ server=/biotecan.com/114.114.114.114
 server=/biotech-meds.com/114.114.114.114
 server=/biotechwell.com/114.114.114.114
 server=/biothink.tech/114.114.114.114
+server=/bioustar.com/114.114.114.114
 server=/biovector.net/114.114.114.114
 server=/biovip.com/114.114.114.114
 server=/bioxtime.com/114.114.114.114
