accelerated-domains: add dmicrobe.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -26794,6 +26794,7 @@ server=/dmguo.com/114.114.114.114
 server=/dmhlj.com/114.114.114.114
 server=/dmhmusic.com/114.114.114.114
 server=/dmhy.com/114.114.114.114
+server=/dmicrobe.com/114.114.114.114
 server=/dmiug.com/114.114.114.114
 server=/dmjk120.com/114.114.114.114
 server=/dmjnb.com/114.114.114.114
