--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45022,6 +45022,7 @@ server=/hzhltec.com/114.114.114.114
 server=/hzhongou.com/114.114.114.114
 server=/hzhqdj.com/114.114.114.114
 server=/hzhr.com/114.114.114.114
+server=/hzhssy.com/114.114.114.114
 server=/hzhstb.com/114.114.114.114
 server=/hzhuang.wang/114.114.114.114
 server=/hzhx.com/114.114.114.114
