accelerated-domains: add hzmansheng.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45066,6 +45066,7 @@ server=/hzlug.org/114.114.114.114
 server=/hzlyhs.com/114.114.114.114
 server=/hzmama.net/114.114.114.114
 server=/hzman.net/114.114.114.114
+server=/hzmansheng.com/114.114.114.114
 server=/hzmantu.com/114.114.114.114
 server=/hzmba.com/114.114.114.114
 server=/hzmctech.com/114.114.114.114
