--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45072,6 +45072,7 @@ server=/hzmba.com/114.114.114.114
 server=/hzmctech.com/114.114.114.114
 server=/hzmdcnc.com/114.114.114.114
 server=/hzmetro.com/114.114.114.114
+server=/hzmkdq.com/114.114.114.114
 server=/hzmogo.com/114.114.114.114
 server=/hzmxkj.net/114.114.114.114
 server=/hzmylike.com/114.114.114.114
