--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45101,6 +45101,7 @@ server=/hzqxbg.com/114.114.114.114
 server=/hzr1.com/114.114.114.114
 server=/hzranqu.com/114.114.114.114
 server=/hzrc.com/114.114.114.114
+server=/hzrdjt.com/114.114.114.114
 server=/hzredream.com/114.114.114.114
 server=/hzrib.com/114.114.114.114
 server=/hzrjkf.com/114.114.114.114
