accelerated-domains: add keyingchem.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -52956,6 +52956,7 @@ server=/keygotech.com/114.114.114.114
 server=/keyi.mobi/114.114.114.114
 server=/keyibao.com/114.114.114.114
 server=/keyigroup.com/114.114.114.114
+server=/keyingchem.com/114.114.114.114
 server=/keyipump.com/114.114.114.114
 server=/keyislove.com/114.114.114.114
 server=/keylol.com/114.114.114.114
