--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76708,6 +76708,7 @@ server=/sinotf.com/114.114.114.114
 server=/sinotn.com/114.114.114.114
 server=/sinotone.net/114.114.114.114
 server=/sinotrans.com/114.114.114.114
+server=/sinotruk.com/114.114.114.114
 server=/sinotrust-group.com/114.114.114.114
 server=/sinoturning.com/114.114.114.114
 server=/sinovale.com/114.114.114.114
