--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -5942,6 +5942,7 @@ server=/58kuaipai.com/114.114.114.114
 server=/58kuku.com/114.114.114.114
 server=/58lingshi.com/114.114.114.114
 server=/58lovepet.com/114.114.114.114
+server=/58meeting.com/114.114.114.114
 server=/58mhg.com/114.114.114.114
 server=/58moto.com/114.114.114.114
 server=/58peilian.com/114.114.114.114
