--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21649,6 +21649,7 @@ server=/cmcmpc.com/114.114.114.114
 server=/cmcmsecurity.com/114.114.114.114
 server=/cmcmserv.com/114.114.114.114
 server=/cmcmtrans.com/114.114.114.114
+server=/cmco-cn.com/114.114.114.114
 server=/cmct22.com/114.114.114.114
 server=/cmd5.com/114.114.114.114
 server=/cmd5.la/114.114.114.114
