--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32514,6 +32514,7 @@ server=/ftourcn.com/114.114.114.114
 server=/ftp.pet/114.114.114.114
 server=/ftsafe.com/114.114.114.114
 server=/ftsfund.com/114.114.114.114
+server=/ftswcc.com/114.114.114.114
 server=/ftuan.com/114.114.114.114
 server=/ftvsingingcontest.com/114.114.114.114
 server=/ftxad.com/114.114.114.114
