--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43023,6 +43023,7 @@ server=/hpstore.cc/114.114.114.114
 server=/hpswk.com/114.114.114.114
 server=/hptea.com/114.114.114.114
 server=/hpv112.com/114.114.114.114
+server=/hpwin.com/114.114.114.114
 server=/hpwjs.com/114.114.114.114
 server=/hpwu.com/114.114.114.114
 server=/hpwxc.com/114.114.114.114
