accelerated-domains: add hzhehua.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45016,6 +45016,7 @@ server=/hzh1.com/114.114.114.114
 server=/hzhadx.com/114.114.114.114
 server=/hzhanbo.com/114.114.114.114
 server=/hzhcloud.com/114.114.114.114
+server=/hzhehua.com/114.114.114.114
 server=/hzhengtong.com/114.114.114.114
 server=/hzhfzx.com/114.114.114.114
 server=/hzhike.com/114.114.114.114
