--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45026,6 +45026,7 @@ server=/hzhlpt.com/114.114.114.114
 server=/hzhltec.com/114.114.114.114
 server=/hzhongou.com/114.114.114.114
 server=/hzhqdj.com/114.114.114.114
+server=/hzhqqz.com/114.114.114.114
 server=/hzhr.com/114.114.114.114
 server=/hzhssy.com/114.114.114.114
 server=/hzhstb.com/114.114.114.114
