accelerated-domains: add li-on.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55818,6 +55818,7 @@ server=/lhzly.com/114.114.114.114
 server=/lhzq.com/114.114.114.114
 server=/li-ca.com/114.114.114.114
 server=/li-ning.com/114.114.114.114
+server=/li-on.com/114.114.114.114
 server=/li-world.com/114.114.114.114
 server=/li.auto/114.114.114.114
 server=/li63.com/114.114.114.114
