--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62466,6 +62466,7 @@ server=/mzfanyi.vip/114.114.114.114
 server=/mzfile.com/114.114.114.114
 server=/mzfsm.com/114.114.114.114
 server=/mzfxw.com/114.114.114.114
+server=/mzgroup.vip/114.114.114.114
 server=/mzgtuan.com/114.114.114.114
 server=/mzh.ren/114.114.114.114
 server=/mzhb.com/114.114.114.114
