--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67977,6 +67977,7 @@ server=/ppj.io/114.114.114.114
 server=/ppjtc.net/114.114.114.114
 server=/ppkankan01.com/114.114.114.114
 server=/ppkao.com/114.114.114.114
+server=/ppkjinc.com/114.114.114.114
 server=/pplib.net/114.114.114.114
 server=/pplive.com/114.114.114.114
 server=/pplm1996.com/114.114.114.114
