accelerated-domains: add general-power.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33939,6 +33939,7 @@ server=/gendan5.com/114.114.114.114
 server=/gendantong.com/114.114.114.114
 server=/genelinkout.com/114.114.114.114
 server=/genepharma.com/114.114.114.114
+server=/general-power.com/114.114.114.114
 server=/generalfushi.com/114.114.114.114
 server=/generalichina.com/114.114.114.114
 server=/generalwatertech.com/114.114.114.114
