accelerated-domains: add hopechart.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42813,6 +42813,7 @@ server=/hooyoo.com/114.114.114.114
 server=/hopebank.com/114.114.114.114
 server=/hopebeauty.com/114.114.114.114
 server=/hopebiol.com/114.114.114.114
+server=/hopechart.com/114.114.114.114
 server=/hopecool.com/114.114.114.114
 server=/hopeda.com/114.114.114.114
 server=/hopegoocdn.com/114.114.114.114
